--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "ignorePatterns" :["googleDocAppScript.js"]
   },
   "browserslist": {
     "production": [
