--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.12",
     "recharts-to-png": "^2.1.0",
@@ -28,7 +29,9 @@
       "react-app",
       "react-app/jest"
     ],
-    "ignorePatterns" :["googleDocAppScript.js"]
+    "ignorePatterns": [
+      "googleDocAppScript.js"
+    ]
   },
   "browserslist": {
     "production": [
