--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.3.4",
     "recharts": "^2.1.12",
     "recharts-to-png": "^2.1.0",
     "web-vitals": "^2.1.4"
