--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "homepage": "https://dbenchi-stripe.github.io/SAF/",
   "private": true,
   "dependencies": {
+    "@handsontable/react": "^12.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
+    "handsontable": "^12.1.1",
     "html2canvas": "^1.4.1",
     "json2csv": "^5.0.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
