--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json2csv": "^5.0.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-beforeunload": "^2.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
