--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-beforeunload": "^2.5.3",
+    "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.3.4",
     "recharts": "^2.1.12",
     "recharts-to-png": "^2.1.0",
+    "use-local-storage-state": "^18.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
