--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
+    "flagged": "^2.0.5",
     "handsontable": "^12.1.1",
     "html2canvas": "^1.4.1",
     "json2csv": "^5.0.7",
