--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "file-saver": "^2.0.5",
     "flagged": "^2.0.5",
     "handsontable": "^12.1.1",
