--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@fontsource/roboto": "^4.5.7",
     "@handsontable/react": "^12.1.1",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.0",
+    "@mui/lab": "^5.0.0-alpha.91",
+    "@mui/material": "^5.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "html2canvas": "^1.4.1",
     "json2csv": "^5.0.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beforeunload": "^2.5.3",
     "react-dom": "^18.2.0",
